# KamelBot-Discord-Bot

./: README.md  chat.py  decide.py  dis.syn  export.yml  install.sh  irc.py  irc.syn  main.py  natlang.py  notes.not  pyproject.toml  set.ctx  set.in  set.out  subscribers.lst
keywords/: happy.emo  sad.emo
knowledge/: actions.att  attributes.att  objects.att  objects.pnt
vocab/: declarations.gm  noun.voc  patterns.grm  questions.grm
